salesforce-prep/force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <description>A person who applies for positions.</description>
    <label>Candidate</label>
    <nameField>
        <displayFormat>CAND-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>