salesforce-prep/force-app/main/default/objects/Candidate__c/validationRules/Experience_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_Not_Negative</fullName>
    <active>true</active>
    <description>Years of experience cannot be negative.</description>
    <errorConditionFormula>Years_of_Experience__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Years_of_Experience__c</errorDisplayField>
    <errorMessage>Years of Experience cannot be negative.</errorMessage>
</ValidationRule>